--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,54 @@
-.App {
-  text-align: center;
+.FormBg {
+  /* background-color: #f6f6f6 !important; */
+  background-image: linear-gradient(120deg, #ff4081, #81d4fa);
+  height: 100vh;
+  width: 100vw;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.stepperWrapper {
+  background-color: white !important;
+  width: 500px;
+  min-height: 600px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 0px 20px;
+  border-radius: 10px;
+}
+@media (max-width: 550px) {
+  .stepperWrapper {
+    min-height: 600px;
+    width: 400px;
+  }
+  .bottomButtons {
+    padding-bottom: 10px;
+  }
+  .heading {
+    font-size: 25px;
   }
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media (max-width: 420px) {
+  .stepperWrapper {
+    width: 350px;
   }
-  to {
-    transform: rotate(360deg);
+  .heading {
+    font-size: 22px;
+  }
+  .bottomButtons {
+    padding-bottom: 10px;
+  }
+}
+@media (max-width: 369px) {
+  .stepperWrapper {
+    width: 300px;
+    padding: 0;
+  }
+  .heading {
+    font-size: 18px;
   }
 }
