--- a/src/App.css
+++ b/src/App.css
@@ -1,54 +1,25 @@
-.FormBg {
-  /* background-color: #f6f6f6 !important; */
-  background-image: linear-gradient(120deg, #ff4081, #81d4fa);
-  height: 100vh;
-  width: 100vw;
+.heading {
+  text-align: center;
 }
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+.checkbox {
+  text-align: left;
 }
-.stepperWrapper {
-  background-color: white !important;
-  width: 500px;
-  min-height: 600px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  padding: 0px 20px;
-  border-radius: 10px;
+.checkbox > b {
+  font-size: 12px;
+  color: gray;
 }
-@media (max-width: 550px) {
-  .stepperWrapper {
-    min-height: 600px;
-    width: 400px;
-  }
-  .bottomButtons {
-    padding-bottom: 10px;
-  }
-  .heading {
-    font-size: 25px;
-  }
+.review_Content {
+  border: 1px solid rgb(70, 67, 67);
+  display: flex;
+  justify-content: space-between;
 }
-@media (max-width: 420px) {
-  .stepperWrapper {
-    width: 350px;
-  }
-  .heading {
-    font-size: 22px;
-  }
-  .bottomButtons {
-    padding-bottom: 10px;
-  }
+.buttons {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
-@media (max-width: 369px) {
-  .stepperWrapper {
-    width: 300px;
-    padding: 0;
-  }
-  .heading {
-    font-size: 18px;
-  }
+.data {
+  text-align: center !important;
+  margin-top: 10px !important;
 }
